Closed Bug 1820424 Opened 2 years ago Closed 2 years ago

Bad mState crash in WebTransportSessionProxy::OnIncomingStreamAvailableInternal()

Categories

(Core :: Networking, defect)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox113 --- fixed

People

(Reporter: jesup, Assigned: kershaw)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

The asseration failure happened because we queued "OnIncomingStreamAvailableInternal" event and call it after "OnStopRequest". Before the event got invoked, the session can be already closed, so we hit the assertion.

Assignee: nobody → kershaw
Status: NEW → ASSIGNED
Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/878b945d74a1 Cleanup WebTransportSessionProxy, r=jesup,necko-reviewers
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
Flags: needinfo?(kershaw)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: