Bug 1820424 - Cleanup WebTransportSessionProxy, r=jesup,necko-reviewers

The asseration failure happened because we queued "OnIncomingStreamAvailableInternal" event and call it after "OnStopRequest". Before the event got invoked, the session can be already closed, so we hit the assertion.

Differential Revision: https://phabricator.services.mozilla.com/D172667